# ProgrammingExercises

./: CMakeLists.txt
Problem_3_4/: CMakeLists.txt
Problem_3_4/src/: main.cpp
SimpleDataStructures/: CMakeLists.txt
SimpleDataStructures/include/: list_node.h  simple_stack.h
SimpleDataStructures/include/SimpleDataStructures/: list_node.h  simple_stack.h
SimpleDataStructures/test/: simple_stack_tests.cpp
